--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IT-Cube.Миасс</title>
+  <link rel="stylesheet" href="basic.css">
 </head>
 <body>
   <header>
@@ -69,7 +70,7 @@
       <h2>Our Best Blogs Ever</h2>
       <p>"Try our blog to find the best tips and tricks to select your gift"</p>
       <ul>
-        <li>
+        <li class="with-picture">
           <h3>The best way to wish your wife</h3>
           <p>Mr. John Doe</p>
           <img src="https://via.placeholder.com/400x370" alt="">
