корректирует header и footer

--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
   <link rel="stylesheet" href="basic.css">
 </head>
 <body>
-  <header>
+  <header class="container main-header">
     <nav class="main-navigation">
-      <a href="#"><img src="https://via.placeholder.com/41x39" alt=""></a>
+      <a href="#" class="header-logo"><img src="https://via.placeholder.com/41x39" alt=""></a>
       <ul class="main-menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Service</a></li>
         <li><a href="#">Blogs</a></li>
       </ul>
-      <ul class="new-history">
-        <li><a href="">Gift finder</a></li>
-      </ul>
+      <a href="#" class="new-history">Give story</a>
     </nav>
   </header>
   <main class="main">
@@ -90,7 +88,7 @@
       </ul>
     </section>
   </main>
-  <footer>
+  <footer class="main-footer">
     <nav class="footer-navigation">
       <a href="#"><img src="https://via.placeholder.com/41x39" alt=""></a>
       <ul class="footer-menu">
@@ -101,13 +99,13 @@
       </ul>
     </nav>
     <section class="social">
-      <h2>Мы в социальных сетях</h2>
+      <h2 class="visually-hidden">Мы в социальных сетях</h2>
       <ul>
-        <li><a href="#">facebook</a></li>
-        <li><a href="#">twitter</a></li>
-        <li><a href="#">instagram</a></li>
-        <li><a href="#">youtube</a></li>
-        <li><a href="#">pinterest</a></li>
+        <li><a href="#" aria-label="facebook"></a></li>
+        <li><a href="#" aria-label="twitter"></a></li>
+        <li><a href="#" aria-label="instagram"></a></li>
+        <li><a href="#" aria-label="youtube"></a></li>
+        <li><a href="#" aria-label="pinterest"></a></li>
       </ul>
     </section>
     <section class="privacy">
