корректирует section.find-story

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
   </header>
   <main class="main">
     <section class="find-story">
-      <h2>Find a gift for your wife or girlfriend</h2>
-      <p>Struggling to find a gift for your wife or girlfriend? No problem!</p>
-      <a href="#">Find gift now</a>
-      <img src="https://via.placeholder.com/720x700" alt="">
+      <div class="container">
+        <h2>Find a gift for your wife or girlfriend</h2>
+        <p>Struggling to find a gift for your wife or girlfriend? No problem!</p>
+        <a href="#">Find story now</a>
+        <img src="https://via.placeholder.com/720x700" alt="">
+      </div>
     </section>
     <section class="about">
       <h2>How we work</h2>
