корректирует section.about

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
       </div>
     </section>
     <section class="about">
-      <h2>How we work</h2>
-      <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All you have to do is take our short survey that only takes seconds, and our proprietary algorithm will match you with a few perfect gift options.</p>
-      <a href="#">Learn More</a>
-      <img src="https://via.placeholder.com/720x600" alt="">
+      <div class="container">
+        <h2>How we work</h2>
+        <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All you have to do is take our short survey that only takes seconds, and our proprietary algorithm will match you with a few perfect gift options.</p>
+        <a href="#">Learn More</a>
+        <img src="https://via.placeholder.com/720x600" alt="">
+      </div>
     </section>
     <section class="last-stories">
       <h2>Gifts for all Occasions</h2>
