корректирует section.last-stories

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#">Service</a></li>
         <li><a href="#">Blogs</a></li>
       </ul>
-      <a href="#" class="new-history">Give story</a>
+      <a href="#" class="new-history">Есть история</a>
     </nav>
   </header>
   <main class="main">
@@ -40,7 +40,7 @@
     <section class="last-stories">
       <h2>Gifts for all Occasions</h2>
       <p>“Try our web app to find the best gifts for all occasions”</p>
-      <ul class="list-stories">
+      <ul class="stories-list">
         <li>
           <h3>Birthday</h3>
           <img src="https://via.placeholder.com/270x270" alt="">
