корректирует write-us

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
       </ul>
     </section>
     <section class="write-us">
-      <h2>Sign up or contact us</h2>
-      <p>Ready to get started?</p>
-      <a href="#">Find gift now</a>
-      <a href="#">How it works</a>
+      <div class="container">
+        <h2>Sign up or contact us</h2>
+        <p>Ready to get started?</p>
+        <a href="#">Напишите нам</a>
+      </div>
     </section>
     <section class="best-stories">
       <h2>Our Best Blogs Ever</h2>
