доработки. нужны изображение. есть стилизация при курсоре

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav class="main-navigation">
       <a href="#" class="header-logo"><img src="https://via.placeholder.com/41x39" alt=""></a>
       <ul class="main-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Service</a></li>
-        <li><a href="#">Blogs</a></li>
+        <li><a href="#" class="current">Главная</a></li>
+        <li><a href="#">О нас</a></li>
+        <li><a href="#">Сервис</a></li>
+        <li><a href="#">Истории</a></li>
       </ul>
       <a href="#" class="new-history">Есть история</a>
     </nav>
@@ -23,43 +23,52 @@
   <main class="main">
     <section class="find-story">
       <div class="container">
-        <h2>Find a gift for your wife or girlfriend</h2>
-        <p>Struggling to find a gift for your wife or girlfriend? No problem!</p>
-        <a href="#">Find story now</a>
-        <img src="https://via.placeholder.com/720x700" alt="">
+        <h2>Найди историю себе по душе! Страшную, а может романтичную или хочешь исторических фактов?</h2>
+        <p>Не знаешь с чего начать? Не проблема!</p>
+        <a href="#">Рандомный выбор</a>
+        <img src="img/home-miass.jpg" width="720px" height="700px" alt="изображение Миасского музея">
       </div>
     </section>
     <section class="about">
       <div class="container">
-        <h2>How we work</h2>
-        <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All you have to do is take our short survey that only takes seconds, and our proprietary algorithm will match you with a few perfect gift options.</p>
-        <a href="#">Learn More</a>
-        <img src="https://via.placeholder.com/720x600" alt="">
+        <h2>Что из себя представляет Миасс?</h2>
+        <p>Миасс это
+          -
+          один из самых крупных
+           городов Челябинской области. Первое
+          поселение организовал Л.Лугинин
+
+          в 1773 году, что добывал золото. От сюда название - город в золотой долине.
+           после  город развивался
+          и оброс своими историями и сказаниями
+          . Он даже смог попасть в книгу рекордов Гиннесса!</p>
+        <a href="#">Продолжение</a>
+        <img src="img/lake-miass.jpg" width="720px" height="700px" alt="изображение Тургойка">
       </div>
     </section>
     <section class="last-stories">
-      <h2>Gifts for all Occasions</h2>
-      <p>“Try our web app to find the best gifts for all occasions”</p>
+      <h2>Самые последние истории</h2>
+      <p>Истории из Миасса, расказанные местными специально для вас</p>
       <ul class="stories-list">
         <li>
           <h3>Birthday</h3>
           <img src="https://via.placeholder.com/270x270" alt="">
-          <a href="#">See more</a>
+          <a href="#">Смотреть</a>
         </li>
         <li>
           <h3>Anniversary</h3>
           <img src="https://via.placeholder.com/270x270" alt="">
-          <a href="#">See more</a>
+          <a href="#">Смотреть</a>
         </li>
         <li>
           <h3>Valentine's Day</h3>
           <img src="https://via.placeholder.com/270x270" alt="">
-          <a href="#">See more</a>
+          <a href="#">Смотреть</a>
         </li>
         <li>
           <h3>Christmas</h3>
           <img src="https://via.placeholder.com/270x270" alt="">
-          <a href="#">See more</a>
+          <a href="#">Смотреть</a>
         </li>
       </ul>
     </section>
@@ -76,19 +85,19 @@
       <ul>
         <li class="with-picture">
           <h3>The best way to wish your wife</h3>
-          <p>Mr. John Doe</p>
+          <p>История от нашей команды</p>
           <img src="https://via.placeholder.com/400x370" alt="">
-          <a href="#">Read more</a>
+          <a href="#">Продолжение</a>
         </li>
         <li>
           <h3>Database to find the gifts for your girlfriend</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
-          <a href="#">Read more</a>
+          <a href="#">Продолжение</a>
         </li>
         <li>
           <h3>How Artificial Intelligence read your mind to find the best gift</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
-          <a href="#">Read more</a>
+          <a href="#">Продолжение</a>
         </li>
       </ul>
     </section>
