стилизация последних блоков

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
           <img src="https://via.placeholder.com/400x370" alt="">
           <a href="#">Продолжение</a>
         </li>
-        <li>
+        <li class="no-picture">
           <h3>Database to find the gifts for your girlfriend</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
           <a href="#">Продолжение</a>
         </li>
-        <li>
+        <li  class="no-picture-2">
           <h3>How Artificial Intelligence read your mind to find the best gift</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
           <a href="#">Продолжение</a>
