улучшения. добавление изображений

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="container main-header">
     <nav class="main-navigation">
-      <a href="#" class="header-logo"><img src="https://via.placeholder.com/41x39" alt=""></a>
+      <a href="#" class="header-logo"><img src="img/logo.png" width="131px" height="68px" alt="Наш логотип"></a>
       <ul class="main-menu">
         <li><a href="#" class="current">Главная</a></li>
         <li><a href="#">О нас</a></li>
@@ -51,8 +51,8 @@
       <p>Истории из Миасса, расказанные местными специально для вас</p>
       <ul class="stories-list">
         <li>
-          <h3>Birthday</h3>
-          <img src="https://via.placeholder.com/270x270" alt="">
+          <h3>История о чуди белоглазой</h3>
+          <img src="img/choud.jpg" width="270px" height="270px" alt="Арт чуди">
           <a href="#">Смотреть</a>
         </li>
         <li>
@@ -74,24 +74,24 @@
     </section>
     <section class="write-us">
       <div class="container">
-        <h2>Sign up or contact us</h2>
-        <p>Ready to get started?</p>
+        <h2>Знаете интересную историю?</h2>
+        <p>Хотите поделиться?</p>
         <a href="#">Напишите нам</a>
       </div>
     </section>
     <section class="best-stories">
-      <h2>Our Best Blogs Ever</h2>
+      <h2>Лучшие истории</h2>
       <p>"Try our blog to find the best tips and tricks to select your gift"</p>
       <ul>
         <li class="with-picture">
-          <h3>The best way to wish your wife</h3>
+          <h3>Замок в лесу. Самая подлинная история Французской горки</h3>
           <p>История от нашей команды</p>
-          <img src="https://via.placeholder.com/400x370" alt="">
+          <img src="img/francyzskaya-gorka.jpg" width="400px" height="370px" alt="Замок Французской горки">
           <a href="#">Продолжение</a>
         </li>
         <li class="no-picture">
-          <h3>Database to find the gifts for your girlfriend</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+          <h3>Пугачёвский клад</h3>
+          <p>Давным-давно это было. Царица Екатерина тогда правила. Здесь среди Уральских гор непроходимых, темных лесов впервые появились...</p>
           <a href="#">Продолжение</a>
         </li>
         <li  class="no-picture-2">
@@ -104,12 +104,12 @@
   </main>
   <footer class="main-footer">
     <nav class="footer-navigation">
-      <a href="#"><img src="https://via.placeholder.com/41x39" alt=""></a>
+      <a href="#"><img src="img/logo.png" width="131px" height="68px" alt="Наш логотип"></a>
       <ul class="footer-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Service</a></li>
-        <li><a href="#">Blogs</a></li>
+        <li><a href="#" class="current">Главная</a></li>
+        <li><a href="#">О нас</a></li>
+        <li><a href="#">Сервис</a></li>
+        <li><a href="#">Истории</a></li>
       </ul>
     </nav>
     <section class="social">
