--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <a href="#">Смотреть</a>
         </li>
         <li>
-          <h3>Christmas</h3>
-          <img src="https://via.placeholder.com/270x270" alt="">
+          <h3>Полозов дворец</h3>
+          <img src="img/Snake-God-Poloz.png" width="270px" height="270px" alt="царь змей - Полоз">
           <a href="#">Смотреть</a>
         </li>
       </ul>
@@ -81,7 +81,7 @@
     </section>
     <section class="best-stories">
       <h2>Лучшие истории</h2>
-      <p>"Try our blog to find the best tips and tricks to select your gift"</p>
+      <p>Специально для вас мы подобрали самые интересные истории</p>
       <ul>
         <li class="with-picture">
           <h3>Замок в лесу. Самая подлинная история Французской горки</h3>
@@ -124,7 +124,7 @@
     </section>
     <section class="privacy">
       <h2>Privacy — Terms</h2>
-      <p>© 2010 — 2020</p>
+      <p> 2020 — 2020</p>
     </section>
   </footer>
 </body>
