--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
           <a href="#">Смотреть</a>
         </li>
         <li>
-          <h3>Anniversary</h3>
-          <img src="https://via.placeholder.com/270x270" alt="">
-          <a href="#">Смотреть</a>
-        </li>
-        <li>
-          <h3>Valentine's Day</h3>
-          <img src="https://via.placeholder.com/270x270" alt="">
+          <h3>Остров Веры</h3>
+          <img src="img/island-vera.jpg" width="270px" height="270px" alt="Озеро около островва Веры">
           <a href="#">Смотреть</a>
         </li>
         <li>
           <h3>Полозов дворец</h3>
           <img src="img/Snake-God-Poloz.png" width="270px" height="270px" alt="царь змей - Полоз">
+          <a href="#">Смотреть</a>
+        </li>
+        <li>
+          <h3>Солнечная долина. Отдыхай красиво</h3>
+          <img src="img/sun-dolina.jpg" width="270px" height="270px" alt="Солнечная долина зимой">
           <a href="#">Смотреть</a>
         </li>
       </ul>
@@ -95,8 +95,8 @@
           <a href="#">Продолжение</a>
         </li>
         <li  class="no-picture-2">
-          <h3>How Artificial Intelligence read your mind to find the best gift</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+          <h3>Озеро наших тревог</h3>
+          <p>Весной 1984 года перед летними каникулами фотоклуб "импульс" решил провести фотовыставку о поселке Тургояк...</p>
           <a href="#">Продолжение</a>
         </li>
       </ul>
@@ -124,7 +124,7 @@
     </section>
     <section class="privacy">
       <h2>Privacy — Terms</h2>
-      <p> 2020 — 2020</p>
+      <p> 2010 — 2020</p>
     </section>
   </footer>
 </body>
