--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       </ul>
     </section>
     <section class="privacy">
-      <h2>Privacy — Terms</h2>
-      <p> 2010 — 2020</p>
+      <h2>Команда: milevi</h2>
+      <p> мальцева Елена и Новикова Виктория</p>
     </section>
   </footer>
 </body>
