--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </section>
     <section class="privacy">
       <h2>Команда: milevi</h2>
-      <p> мальцева Елена и Новикова Виктория</p>
+      <p> Мальцева Елена и Новикова Виктория</p>
     </section>
   </footer>
 </body>
