корректирует section.best-stories и еще по мелочи

--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
         <li>
           <h3>История о чуди белоглазой</h3>
           <img src="img/choud.jpg" width="270px" height="270px" alt="Арт чуди">
-          <a href="#">Смотреть</a>
+          <a href="#">Читать</a>
         </li>
         <li>
           <h3>Остров Веры</h3>
           <img src="img/island-vera.jpg" width="270px" height="270px" alt="Озеро около островва Веры">
-          <a href="#">Смотреть</a>
+          <a href="#">Читать</a>
         </li>
         <li>
           <h3>Полозов дворец</h3>
           <img src="img/Snake-God-Poloz.png" width="270px" height="270px" alt="царь змей - Полоз">
-          <a href="#">Смотреть</a>
+          <a href="#">Читать</a>
         </li>
         <li>
           <h3>Солнечная долина. Отдыхай красиво</h3>
           <img src="img/sun-dolina.jpg" width="270px" height="270px" alt="Солнечная долина зимой">
-          <a href="#">Смотреть</a>
+          <a href="#">Читать</a>
         </li>
       </ul>
     </section>
@@ -80,24 +80,24 @@
       </div>
     </section>
     <section class="best-stories">
-      <h2>Лучшие истории</h2>
-      <p>Специально для вас мы подобрали самые интересные истории</p>
+      <h2>Популярные истории</h2>
+      <p>Самые интересные истории по мнению наших читателей</p>
       <ul>
-        <li class="with-picture">
-          <h3>Замок в лесу. Самая подлинная история Французской горки</h3>
-          <p>История от нашей команды</p>
+        <li class="best-item best-item--picture">
+          <h3>Замок в лесу. Подлинная история Французской горки</h3>
+          <p></p>
           <img src="img/francyzskaya-gorka.jpg" width="400px" height="370px" alt="Замок Французской горки">
-          <a href="#">Продолжение</a>
+          <a href="#">Читать</a>
         </li>
-        <li class="no-picture">
+        <li class="best-item">
           <h3>Пугачёвский клад</h3>
           <p>Давным-давно это было. Царица Екатерина тогда правила. Здесь среди Уральских гор непроходимых, темных лесов впервые появились...</p>
-          <a href="#">Продолжение</a>
+          <a href="#">Читать</a>
         </li>
-        <li  class="no-picture-2">
+        <li  class="best-item">
           <h3>Озеро наших тревог</h3>
           <p>Весной 1984 года перед летними каникулами фотоклуб "импульс" решил провести фотовыставку о поселке Тургояк...</p>
-          <a href="#">Продолжение</a>
+          <a href="#">Читать</a>
         </li>
       </ul>
     </section>
@@ -123,8 +123,9 @@
       </ul>
     </section>
     <section class="privacy">
-      <h2>Команда: milevi</h2>
-      <p> Мальцева Елена и Новикова Виктория</p>
+      <h2 class="visually-hidden">Privacy Terms</h2>
+      <p>Команда: milevi</p>
+      <p>© 2020</p>
     </section>
   </footer>
 </body>
