--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </li>
         <li>
           <h3>Полозов дворец</h3>
-          <img src="img/Snake-God-Poloz.png" width="270px" height="270px" alt="царь змей - Полоз">
+          <img src="img/Snake-God-Poloz.jpg" width="270px" height="270px" alt="царь змей - Полоз">
           <a href="#">Читать</a>
         </li>
         <li>
