--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <li><a href="#">Сервис</a></li>
         <li><a href="#">Истории</a></li>
       </ul>
-      <a href="#" class="new-history">Есть история</a>
+      <a href="#" class="link link--white new-history">Есть история</a>
     </nav>
   </header>
   <main class="main">
     <section class="find-story">
       <div class="container">
-        <h2>Найди историю себе по душе! Страшную, а может романтичную или хочешь исторических фактов?</h2>
+        <h2>У нас ты найдешь <br/> городскую историю себе по душе!</h2>
         <p>Не знаешь с чего начать? Не проблема!</p>
-        <a href="#">Рандомный выбор</a>
+        <a href="#" class="link link--orange">Случайный выбор</a>
         <img src="img/home-miass.jpg" width="720px" height="700px" alt="изображение Миасского музея">
       </div>
     </section>
@@ -42,7 +42,7 @@
            после  город развивался
           и оброс своими историями и сказаниями
           . Он даже смог попасть в книгу рекордов Гиннесса!</p>
-        <a href="#">Продолжение</a>
+        <a href="#" class="link link--white">Читать далее</a>
         <img src="img/lake-miass.jpg" width="720px" height="700px" alt="изображение Тургойка">
       </div>
     </section>
@@ -76,7 +76,7 @@
       <div class="container">
         <h2>Знаете интересную историю?</h2>
         <p>Хотите поделиться?</p>
-        <a href="#">Напишите нам</a>
+        <a href="#" class="link link--black">Напишите нам</a>
       </div>
     </section>
     <section class="best-stories">
@@ -115,11 +115,9 @@
     <section class="social">
       <h2 class="visually-hidden">Мы в социальных сетях</h2>
       <ul>
-        <li><a href="#" aria-label="facebook"></a></li>
-        <li><a href="#" aria-label="twitter"></a></li>
-        <li><a href="#" aria-label="instagram"></a></li>
-        <li><a href="#" aria-label="youtube"></a></li>
-        <li><a href="#" aria-label="pinterest"></a></li>
+        <li><a href="#" aria-label="facebook" class="social-item social-item--facebook"></a></li>
+        <li><a href="#" aria-label="twitter" class="social-item social-item--twitter"></a></li>
+        <li><a href="#" aria-label="youtube" class="social-item social-item--youtube"></a></li>
       </ul>
     </section>
     <section class="privacy">
