--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </li>
         <li class="best-item">
           <h3>Пугачёвский клад</h3>
-          <p>Давным-давно это было. Царица Екатерина тогда правила. Здесь среди Уральских гор непроходимых, темных лесов впервые появились...</p>
+          <p>История о том, как Емельян Пугачев золото своё в Инышке оставил, да никто его найти не может...</p>
           <a href="#">Читать</a>
         </li>
         <li  class="best-item">
